<Added media quiries to css file to avoid note titles being cut off on mobile>

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -31,8 +31,9 @@ body {
 }
 
 .note-title {
+  /* height: 50px; */
   height: fit-content;
-  margin-top: 13px;
+  /* margin-top: 13px; */
   font-size: 3rem;
 }
 
@@ -76,3 +77,16 @@ body {
   padding: 20px;
   cursor: pointer;
 }
+
+
+@media screen and (max-width: 880px) {
+  .note-title {
+     font-size: 2rem;
+  }
+}  
+
+@media screen and (max-width: 600px) {
+  .note-title {
+     font-size: 1.25rem;
+  }
+}  
